--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <header>
-        <nav>
+    <header class="bg-primary">
+        <nav class="nav-bar display-flex">
             <h3 class="logo">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item">
+                    <a href="" class="nav-link dark2">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link dark2">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link dark2">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link dark2">Login</a>
+                </li>
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-desc">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have
+                    suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
