banner section is complete with small device media query

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
+
+    <!-- full header/hero section  -->
+
     <header class="bg-primary">
+
+        <!-- navigaton section  -->
+
         <nav class="nav-bar display-flex">
             <h3 class="logo">G3 Architects</h3>
             <ul class="nav-links display-flex">
@@ -27,14 +33,19 @@
                 </li>
             </ul>
         </nav>
+
+        <!-- banner section  -->
+
         <div class="banner">
             <div class="banner-content">
-                <h1 class="banner-title">Brand New Group of Architects</h1>
-                <p class="banner-desc">There are many variations of passages of Lorem Ipsum available, but the majority
+                <h1 class="banner-title dark1">Brand New Group of Architects</h1>
+                <p class="banner-desc dark3">There are many variations of passages of Lorem Ipsum available, but the
+                    majority
                     have
                     suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
+            <img class="banner-img" src="images/banner.png" alt="">
         </div>
     </header>
     <main>
