--- a/index.html
+++ b/index.html
@@ -49,7 +49,65 @@
         </div>
     </header>
     <main>
+        <!-- team feature  -->
+        <section class="teams display-flex">
+            <div class="team-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-features">
+                <h3 class="sec-title"><span id="quick" class="dark3">Quick list</span> of Our <span
+                        class="primary-color">Features</span></h3>
+                <p class="team-f-desc dark3">There are many variations of passages of Lorem Ipsum available, but the
+                    majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                <p>
+                    <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- Features will enjoy -->
+        <section>
 
+        </section>
+        <!-- some facts -->
+        <section class="some-facts">
+            <div class="facts-content">
+                <h3 class="sec-title">Some Facts</h3>
+                <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration. </p>
+            </div>
+            <div class="facts-container">
+                <div class="fact display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h3 class="fact-value">54</h3>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h3 class="fact-value">1458</h3>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h3 class="fact-value">590</h3>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact display-flex">
+                    <div><img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h3 class="fact-value">22578</h3>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
