added features section

--- a/index.html
+++ b/index.html
@@ -68,8 +68,45 @@
             </div>
         </section>
         <!-- Features will enjoy -->
-        <section>
+        <section class="features-sec display-flex">
+            <div>
+                <h3 id="feat-title" class="sec-title">Features you will love & enjoy</h3>
+                <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
+                <!-- feature card container  -->
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="feature-desc dark3">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Drag & Drop Builder</h4>
+                    <p class="feature-desc dark3">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="feature-desc dark3">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="feature-desc dark3">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="badge" class="btn-primary">
+                    <span id="jumbo-text">10+Year</span>
+                    <span>Experience</span>
+                </button>
+            </div>
         </section>
         <!-- some facts -->
         <section class="some-facts">
@@ -108,9 +145,24 @@
                 </div>
             </div>
         </section>
+        <!-- our sponsors  -->
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="sec-title">Our Sponspors</h3>
+                <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies display-flex">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="bg-primary">
+        <p class="footer-s dark2">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
