complete media query

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </section>
         <!-- Features will enjoy -->
         <section class="features-sec display-flex">
-            <div>
+            <div class="feature-content">
                 <h3 id="feat-title" class="sec-title">Features you will love & enjoy</h3>
                 <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have
                     suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
@@ -100,10 +100,11 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="ftr-img">
                 <img src="images/architect.png" alt="">
                 <button id="badge" class="btn-primary">
                     <span id="jumbo-text">10+Year</span>
+                    <br>
                     <span>Experience</span>
                 </button>
             </div>
@@ -162,7 +163,9 @@
         </section>
     </main>
     <footer class="bg-primary">
-        <p class="footer-s dark2">All rights reserved copyright@2023 startup landing page design</p>
+        <div class="foot-sec">
+            <p class="footer-s dark2">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 
